hard-gists/4eb4497f57e9f6fb78d14aef27fcc750/run.log
=== Docker Run Log for 4eb4497f57e9f6fb78d14aef27fcc750 ===
Started at: Mi 29. Okt 15:13:24 CET 2025

[2025-10-29 15:13:24] START: Running container for 4eb4497f57e9f6fb78d14aef27fcc750
[2025-10-29 15:13:24] SUCCESS: Container bcc18472e8d4e49a001984c55cced18c7618325e95cae85778ae5f8ae6b89490 started for 4eb4497f57e9f6fb78d14aef27fcc750
=== Container logs for 4eb4497f57e9f6fb78d14aef27fcc750 ===
  File "/snippet.py", line 36
    print "Getting list of spawns"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4eb4497f57e9f6fb78d14aef27fcc750 ===
[2025-10-29 15:13:26] INFO: Container bcc18472e8d4e49a001984c55cced18c7618325e95cae85778ae5f8ae6b89490 has stopped
